--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -1,4 +1,5 @@
- .Overlay {
+
+.Overlay {
   position: fixed;
   top: 0;
   left: 0;
@@ -8,11 +9,15 @@
   justify-content: center;
   align-items: center;
   background-color: rgba(0, 0, 0, 0.8);
-  z-index: 1200;
+  /* z-index: 1200; */
 }
 
 .Modal {
   max-width: calc(100vw - 48px);
   max-height: calc(100vh - 24px);
-  /* z-index: 1200; */
+  z-index: 1200;
 }
+
+/* .Modal img {
+  object-fit: cover;
+} */
